# saturn

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  vcpkg.json
.claude/: settings.json
.claude/agents/: dart-flutter-tooling-agent.md  doc-context-manager.md  engine-architect.md  performance-specialist.md  test-ci-agent.md
.claude/commands/: commit.md
.claude/skills/invoke-gemini/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: deploy_docs.yml
branding/: project.fig
cmake/: ConfigureForBuildType.cmake  ConfigureRuntimeDLLs.cmake  ConfigureSIMD.cmake  ConfigureTestCoverageGeneration.cmake
codex/: CLAUDE.md  CMakeLists.txt
codex/include/codex/: analyzer.hpp  include_graph.hpp  nodes.hpp  parser.hpp  preprocessor.hpp  source_extractor.hpp  symbol.hpp  symbols_database.hpp
codex/src/: analyzer.cpp  include_graph.cpp  parser.cpp  preprocessor.cpp  source_extractor.cpp  symbols_database.cpp
codex/tests/: CMakeLists.txt
codex/tests/unit/: analyzer_test.cpp  parser_test.cpp  preprocessor_test.cpp  test_utils.hpp
docs/: .gitignore  CLAUDE.md  DOCS_STYLE_GUIDE.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: robots.txt
docs/src/components/: CustomHero.astro  CustomSocialIcons.astro  mmd_diagram.tsx
docs/src/mmds/: dependency_hierarchy.mmd
docs/src/styles/: global.css
docsgen/: CLAUDE.md  CMakeLists.txt
docsgen/src/: main.cpp
docsgen/src/cli/: cli_parser.cpp  cli_parser.hpp
docsgen/src/generators/: comment_parser.cpp  comment_parser.hpp  cross_linker.cpp  cross_linker.hpp  mdx_formatter.cpp  mdx_formatter.hpp  mdx_generator.cpp  mdx_generator.hpp
docsgen/src/models/: mdx_file.hpp  parsed_comment.hpp
docsgen/src/writers/: file_writer.cpp  file_writer.hpp
editor/: .gitignore  pubspec.yaml
editor/app/: README.md  pubspec.yaml
editor/app/linux/: CMakeLists.txt
editor/app/test/: widget_test.dart
editor/app/windows/: CMakeLists.txt
mosaic/bench/: ecs_bench.cpp
mosaic/include/mosaic/: defines.hpp  version.h  version.h.in
mosaic/input/: CLAUDE.md
mosaic/platform/: CLAUDE.md
mosaic/scene/: CLAUDE.md
mosaic/src/core/: application.cpp  timer.cpp
mosaic/src/graphics/: render_context.cpp
mosaic/src/input/: input_context.cpp
mosaic/src/scene/: builtin_components.hpp
mosaic/src/tools/: logger.cpp
mosaic/src/window/: window.cpp  window_system.cpp
mosaic/tests/: main.cpp
mosaic/window/: CLAUDE.md
pieces/: CLAUDE.md
pieces/bench/: CMakeLists.txt
saturn/: CMakeLists.txt
saturn/bench/: CMakeLists.txt  ecs_bench.cpp
saturn/core/: CLAUDE.md
saturn/ecs/: CLAUDE.md
saturn/exec/: CLAUDE.md
saturn/graphics/: CLAUDE.md
saturn/include/saturn/: entry_point.hpp  version.h  version.hpp
saturn/include/saturn/core/: application.hpp  platform.hpp  sys_console.hpp  sys_info.hpp  sys_ui.hpp  timer.hpp
saturn/include/saturn/ecs/: archetype.hpp  component.hpp  component_utils.hpp  entity.hpp  entity_allocation_helper.hpp  entity_view.hpp  typeless_vector.hpp
saturn/include/saturn/exec/: move_only_task.hpp
saturn/include/saturn/graphics/: draw_call.hpp  pipeline.hpp  render_context.hpp
saturn/include/saturn/helpers/: memory_leak.hpp
saturn/include/saturn/input/: action.hpp  events.hpp  input_system.hpp  mappings.hpp  sources.def
saturn/include/saturn/input/sources/: input_source.hpp  keyboard_input_source.hpp  mouse_input_source.hpp
saturn/include/saturn/platform/AGDK/: agdk_input_mappings.hpp  agdk_platform.hpp  jni_helper.hpp  jni_loader.cpp
saturn/include/saturn/tools/: logger_default_sink.hpp  tracer.hpp
saturn/include/saturn/window/: callbacks.def
saturn/src/core/: cmd_line_parser.cpp  logger_default_sink.cpp  platform.cpp  sys_console.cpp  sys_info.cpp  sys_ui.cpp
saturn/src/exec/: thread_pool.cpp
saturn/src/graphics/: render_context.cpp  render_system.cpp
saturn/src/graphics/Vulkan/: vulkan_allocator.cpp  vulkan_allocator.hpp  vulkan_framebuffers.hpp  vulkan_render_context.cpp  vulkan_render_context.hpp  vulkan_render_system.hpp  vulkan_swapchain.hpp
saturn/src/graphics/Vulkan/commands/: vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_render_pass.hpp
saturn/src/graphics/Vulkan/context/: vulkan_device.cpp  vulkan_instance.cpp  vulkan_surface.cpp  vulkan_surface.hpp
saturn/src/graphics/Vulkan/pipelines/: vulkan_pipeline.hpp
saturn/src/graphics/WebGPU/: webgpu_commands.hpp  webgpu_device.cpp  webgpu_device.hpp  webgpu_instance.cpp  webgpu_instance.hpp  webgpu_pipeline.hpp  webgpu_render_context.hpp  webgpu_render_system.hpp  webgpu_swapchain.cpp
saturn/src/input/: input_system.cpp
saturn/src/input/sources/: keyboard_input_source.cpp  mouse_input_source.cpp
saturn/src/platform/AGDK/: agdk_platform.cpp  agdk_sys_console.hpp  agdk_sys_info.cpp  agdk_sys_ui.cpp  agdk_sys_ui.hpp  agdk_text_input_source.hpp  agdk_window_system.hpp  jni_helper.cpp
saturn/src/platform/Emscripten/: emscripten_platform.hpp  emscripten_sys_info.hpp  emscripten_sys_ui.cpp
saturn/src/platform/GLFW/: glfw_keyboard_input_source.cpp  glfw_keyboard_input_source.hpp  glfw_mouse_input_source.cpp  glfw_mouse_input_source.hpp  glfw_window_system.hpp
saturn/src/platform/POSIX/: posix_platform.cpp  posix_platform.hpp  posix_sys_info.hpp
saturn/src/platform/Win32/: win32_platform.hpp  win32_sys_console.hpp  win32_sys_info.cpp  win32_sys_info.hpp  win32_sys_ui.cpp  win32_sys_ui.hpp  win32_unified_text_input_source.hpp
saturn/src/scene/: builtin_components.hpp
saturn/src/tools/: tracer.cpp
saturn/tests/: CMakeLists.txt
saturn/tests/unit/: thread_pool_test.cpp
saturn_bridge_android/: .gitignore  build.gradle.kts  gradle.properties
saturn_bridge_android/gradle/: libs.versions.toml
scripts/: jni_on_load_generator.py  requirements.txt
testbed/: CMakeLists.txt
testbed/src/: main.cpp  testbed.cpp  testbed.hpp
testbed_android/: settings.gradle.kts
testbed_android/app/: build.gradle.kts
tests/: CMakeLists.txt  main.cpp
(+125 files in other folders)
